# ticket-master

./: CMakeLists.txt  README.md
include/: TicketSystem.h
src/: TicketSystem.cpp  main.cpp
tests/: test_ticket_system.cpp
